--- a/AddCategory.html
+++ b/AddCategory.html
@@ -26,6 +26,7 @@
 				<li><a href="index.html">Home</a></li>
 				<li><a href="AddItem.html">Add Item</a></li>
 				<li><a href="AddCategory.html">Add Category</a></li>
+				<li><a href="All_Items.html">All Items</a></li>
 			  </ul>
           </nav>
 
