--- a/Sign-In.html
+++ b/Sign-In.html
@@ -10,7 +10,7 @@
 	<body class="no-sidebar is-preload" style="padding-top: 5%; padding-bottom: 5%;">
 		<div id="page-wrapper">
 
-			<!-- Main -->
+			<!-- Main -->`
 				<p style="text-align:center;"><a href="#"><img style="width:15%;" src="images/logo.png" alt="" /></a></p>
 
 			<form>
