--- a/index.html
+++ b/index.html
@@ -1,12 +1,7 @@
 <!DOCTYPE HTML>
-<!--
-	Helios by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
-		<title>Helios by HTML5 UP</title>
+		<title>Fixer</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -33,6 +28,8 @@
 								<li><a href="index.html">Home</a></li>
 								<li><a href="AddItem.html">Add Item</a></li>
 								<li><a href="AddCategory.html">Add Category</a></li>
+								<li><a href="All_Items.html">All Items</a></li>
+								<li><a href="All_Items.html">Sign Out</a></li>
 							</ul>
 						</nav>
 
@@ -43,75 +40,66 @@
 					<div class="reel">
 
 						<article>
-							<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
+							<a href="Single_Item.html" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
 							<header>
 								<h3><a href="#">Item Name</a></h3>
 							</header>
 						</article>
 
 						<article>
-							<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
+							<a href="Single_Item.html" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
 							<header>
 								<h3><a href="#">Item Name</a></h3>
 							</header>
 						</article>
 
 						<article>
-							<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
+							<a href="Single_Item.html" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
 							<header>
 								<h3><a href="#">Item Name</a></h3>
 							</header>
 						</article>
 
 						<article>
-							<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
+							<a href="Single_Item.html" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
 							<header>
 								<h3><a href="#">Item Name</a></h3>
 							</header>
 						</article>
 
 						<article>
-							<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
+							<a href="Single_Item.html" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
 							<header>
 								<h3><a href="#">Item Name</a></h3>
 							</header>
 						</article>
 
 						<article>
-							<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
+							<a href="Single_Item.html" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+							<header>
+								<h3><a href="#">Item Name</a></h3>
+							</header>
+						</article>
+						<article>
+							<a href="Single_Item.html" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
 							<header>
 								<h3><a href="#">Item Name</a></h3>
 							</header>
 						</article>
 
 						<article>
-							<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
+							<a href="Single_Item.html" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
 							<header>
 								<h3><a href="#">Item Name</a></h3>
 							</header>
 						</article>
 
 						<article>
-							<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
+							<a href="Single_Item.html" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
 							<header>
 								<h3><a href="#">Item Name</a></h3>
 							</header>
 						</article>
-
-						<article>
-							<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
-							<header>
-								<h3><a href="#">Item Name</a></h3>
-							</header>
-						</article>
-
-						<article>
-							<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
-							<header>
-								<h3><a href="#">Item Name</a></h3>
-							</header>
-						</article>
-
 					</div>
 				</section>
 					</div>
